# cpp_template

./: .buildinfo  .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  environment.yml  genindex.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: ci.yml
docs/: Doxyfile  conf.py  index.rst
include/PROJECT_NAME_PLACEHOLDER/: engine.h
scripts/: build.sh  build_docs.sh  run_tests.sh  setup_project.sh
src/: CMakeLists.txt  engine.cpp  main.cpp
tests/: CMakeLists.txt  engine_test.cpp
